spade-language-server/src/tests/snapshots/spade_language_server__tests__completion__locals_complete_correctly.snap
---
source: spade-language-server/src/tests/completion.rs
expression: "expected.to_string() + \"\\n---code ⬆️ completion ⬇️ ---\\n\" + &result"
---

        entity test(clk: clock, argument: bool) {
            let before_let = false;
            reg(clk) before_reg = false;
            decl before_decl;

            {
                let inner_but_hidden = false;
            };

            {
                let inner_let = false;

                // ^[1] completion
            };

            let before_decl = false;
            let after_let = false;
            reg(clk) after_reg = false;
        }
    
---code ⬆️ completion ⬇️ ---
Memory [Memory]	Memory
argument	-
before_decl	-
before_let	-
before_reg	-
bool [bool]	bool
clk	-
clock [clock]	clock
inner_let	-
inout [inout]	inout
int [int]	int
proj [proj]	proj
test(…) [proj::test]	test(${1:clk}, ${2:argument})$0
tri [tri]	tri
uint [uint]	uint
