spade-language-server/src/tests/snapshots/spade_language_server__tests__completion__method_completion_does_not_run_in_next_token.snap
---
source: spade-language-server/src/tests/completion.rs
expression: "expected.to_string() + \"\\n---code ⬆️ completion ⬇️ ---\\n\" + &result"
---

        struct NameOfStruct {}

        impl NameOfStruct {
            fn func(self) {}
        }

        fn foo() {
            NameOfStruct(). if
                        //  ^[1] completion
        }
    
---code ⬆️ completion ⬇️ ---
Memory [Memory]	Memory
NameOfStruct [proj::NameOfStruct]	NameOfStruct
NameOfStruct() [proj::NameOfStruct]	NameOfStruct()$0
bool [bool]	bool
clock [clock]	clock
inout [inout]	inout
int [int]	int
proj [proj]	proj
tri [tri]	tri
uint [uint]	uint
