spade-language-server/src/tests/snapshots/spade_language_server__tests__completion__non_imported_enum_variants_are_not_naked_completed.snap
---
source: spade-language-server/src/tests/completion.rs
expression: "expected.to_string() + \"\\n---code ⬆️ completion ⬇️ ---\\n\" + &result"
---

        enum A {
            B,
            C{x: bool},
        }

        fn main() {
            
        // ^[1] completion
        }
    
---code ⬆️ completion ⬇️ ---
A	-
Memory	-
bool	-
clock	-
inout	-
int	-
main() [proj::main]	main()$0
proj [proj]	proj
tri	-
uint	-
