spade-language-server/src/tests/snapshots/spade_language_server__tests__completion__path_completion_works_on_partial_paths.snap
---
source: spade-language-server/src/tests/completion.rs
expression: "expected.to_string() + \"\\n---code ⬆️ completion ⬇️ ---\\n\" + &result"
---

        mod abc {
            mod def {
                struct A {
                    
                }
            }
        }

        fn main() {
            abc::
              // ^[1] completion
        }
    
---code ⬆️ completion ⬇️ ---
def	def
